<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/quizz_activity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question"
        android:layout_marginBottom="5dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:id="@+id/layout1"
        android:layout_centerHorizontal="true">

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vrai"
        android:text="@string/vrai"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/faux"
            android:text="@string/faux"
            android:layout_toRightOf="@+id/vrai"
            android:layout_marginLeft="5px"
            android:layout_alignTop="@+id/vrai"/>
    </RelativeLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Vreponse"
        android:text="@string/reponse"
        android:layout_below="@+id/layout1"
        android:layout_margin="2dp"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/layout1"
        android:layout_alignRight="@+id/layout1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/suivante"
        android:text="@string/suivante"
        android:layout_below="@+id/Vreponse"
        android:layout_margin="2dp"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/layout1"
        android:layout_alignRight="@+id/layout1"/>

    <ImageView
        android:layout_width="1000px"
        android:layout_height="1000px"
        android:id="@+id/image"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/suivante"
        android:layout_marginTop="80dp"/>

</RelativeLayout>
